# vsb-petsc-fourier

./: .gitignore  README.md  dft.ipynb  dft_idft.c  dft_lib.c  dft_lib.h  dft_numpy.c  dft_random.c  pyproject.toml
